update translations for profile page, fix .expo gitignore issue finally

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -312,7 +312,50 @@
     "motionStandard": "السماح بالحركة",
     "motionStandardDesc": "حافظ على تجربة الرسوم المتحركة القياسية.",
     "errorSaveHighContrast": "تعذر حفظ تفضيل التباين العالي. يرجى المحاولة مرة أخرى.",
-    "errorSaveMotion": "تعذر حفظ تفضيل الحركة. يرجى المحاولة مرة أخرى."
+    "errorSaveMotion": "تعذر حفظ تفضيل الحركة. يرجى المحاولة مرة أخرى.",
+    "accordionExpandHint": "توسيع القسم",
+    "accordionCollapseHint": "طي القسم",
+    "householdSectionTitle": "منزلي",
+    "householdSectionDesc": "إدارة أعضاء المنزل والأطفال وتفاصيل الحساسية.",
+    "dietarySectionTitle": "المتطلبات الغذائية",
+    "dietarySectionDesc": "تعديل أهداف التغذية وتفضيلات التتبع.",
+    "appearanceSectionTitle": "مظهر التطبيق",
+    "appearanceSectionDesc": "تخصيص المظهر واللغة وتفضيلات إمكانية الوصول.",
+    "privacySectionTitle": "الخصوصية والأمان",
+    "privacySectionDesc": "التحكم في التحليلات والوثائق القانونية وحقوق البيانات الخاصة بك.",
+    "accountSectionTitle": "معلومات الحساب",
+    "accountSectionDesc": "مراجعة تفاصيل الحساب أو تسجيل الخروج.",
+    "householdErrorCreateCode": "لم نتمكن من إنشاء رمز منزلك. اسحب للتحديث وحاول مرة أخرى.",
+    "householdCodeCopied": "تم نسخ رمز المنزل إلى الحافظة.",
+    "householdErrorCopyCode": "لم نتمكن من نسخ الرمز. يرجى المحاولة مرة أخرى.",
+    "householdCodeUpdated": "تم تحديث رمز منزلك.",
+    "householdCodeGenerated": "أنشأنا رمزًا جديدًا لمنزلك.",
+    "householdErrorUpdateCode": "لم نتمكن من تحديث الرمز. يرجى المحاولة مرة أخرى.",
+    "householdLeaveTitle": "مغادرة المنزل",
+    "householdLeaveMessage": "سننقلك إلى منزل جديد تمامًا برمز جديد. هل أنت متأكد أنك تريد المغادرة؟",
+    "householdLeaveButton": "مغادرة",
+    "householdLeftSuccess": "لقد تركت المنزل القديم. أنشأنا رمزًا جديدًا لك فقط.",
+    "householdErrorLeaveTitle": "تعذر مغادرة المنزل",
+    "householdErrorLeaveMessage": "واجهنا مشكلة في إنشاء رمزك الجديد. يرجى المحاولة مرة أخرى.",
+    "householdMemberConfirmed": "تم تأكيد عضو المنزل.",
+    "householdErrorConfirmTitle": "تعذر تأكيد العضو",
+    "householdErrorConfirmMessage": "لم نتمكن من الموافقة على هذا الشخص الآن. يرجى المحاولة مرة أخرى.",
+    "allergiesUpdated": "تم تحديث قائمة الحساسية لملفك الشخصي.",
+    "allergiesErrorSave": "لم نتمكن من حفظ حساسياتك. يرجى المحاولة مرة أخرى.",
+    "childErrorNameRequired": "أدخل اسمًا قبل إضافة طفل.",
+    "childAddedSuccess": "تمت إضافة {{name}} إلى منزلك.",
+    "childErrorAdd": "لم نتمكن من إضافة هذا الطفل الآن. يرجى المحاولة مرة أخرى.",
+    "childErrorNameRequiredSave": "أدخل اسمًا قبل حفظ التغييرات.",
+    "childUpdatedSuccess": "تم تحديث تفاصيل {{name}}.",
+    "childErrorUpdate": "لم نتمكن من تحديث هذه التفاصيل. يرجى المحاولة مرة أخرى.",
+    "childRemoveTitle": "إزالة طفل",
+    "childRemoveMessage": "إزالة {{name}} من منزلك؟",
+    "childRemoveButton": "إزالة",
+    "childRemovedSuccess": "تمت إزالة {{name}} من منزلك.",
+    "childErrorRemoveTitle": "تعذر إزالة الطفل",
+    "childErrorRemoveMessage": "واجهنا مشكلة في إزالة هذا الطفل. يرجى المحاولة مرة أخرى.",
+    "pendingErrorDismissTitle": "تعذر تجاهل الطلبات",
+    "pendingErrorDismissMessage": "لم نتمكن من وضع علامة على هذه الطلبات كمراجعة. يرجى المحاولة مرة أخرى."
   },
   "tasks": {
     "addTask": "إضافة مهمة جديدة",
