--- a/i18n/locales/en-CA.json
+++ b/i18n/locales/en-CA.json
@@ -483,7 +483,50 @@
     "nutritionSaveSuccess": "Nutrition goals updated for your profile.",
     "nutritionSaveError": "We couldn’t save your nutrition goals. Please try again.",
     "base": "Standard",
-    "baseDesc": "Balanced sizes for most readers."
+    "baseDesc": "Balanced sizes for most readers.",
+    "accordionExpandHint": "Expand section",
+    "accordionCollapseHint": "Collapse section",
+    "householdSectionTitle": "My household",
+    "householdSectionDesc": "Manage household members, children, and allergy details.",
+    "dietarySectionTitle": "Dietary requirements",
+    "dietarySectionDesc": "Adjust nutrition goals and tracking preferences.",
+    "appearanceSectionTitle": "App appearance",
+    "appearanceSectionDesc": "Customize the look, language, and accessibility preferences.",
+    "privacySectionTitle": "Privacy & security",
+    "privacySectionDesc": "Control analytics, legal docs, and your data rights.",
+    "accountSectionTitle": "Account information",
+    "accountSectionDesc": "Review account details or sign out.",
+    "householdErrorCreateCode": "We couldn't create your household code. Pull to refresh and try again.",
+    "householdCodeCopied": "Household code copied to your clipboard.",
+    "householdErrorCopyCode": "We couldn't copy the code. Please try again.",
+    "householdCodeUpdated": "Your household code has been updated.",
+    "householdCodeGenerated": "We generated a fresh code for your household.",
+    "householdErrorUpdateCode": "We couldn't update the code. Please try again.",
+    "householdLeaveTitle": "Leave household",
+    "householdLeaveMessage": "We'll move you into a brand-new household with a fresh code. Are you sure you want to leave?",
+    "householdLeaveButton": "Leave",
+    "householdLeftSuccess": "You've left the old household. We created a new code just for you.",
+    "householdErrorLeaveTitle": "Couldn't leave household",
+    "householdErrorLeaveMessage": "We ran into an issue creating your new code. Please try again.",
+    "householdMemberConfirmed": "Household member confirmed.",
+    "householdErrorConfirmTitle": "Couldn't confirm member",
+    "householdErrorConfirmMessage": "We couldn't approve this person right now. Please try again.",
+    "allergiesUpdated": "Allergy list updated for your profile.",
+    "allergiesErrorSave": "We couldn't save your allergies. Please try again.",
+    "childErrorNameRequired": "Enter a name before adding a child.",
+    "childAddedSuccess": "{{name}} has been added to your household.",
+    "childErrorAdd": "We couldn't add that child right now. Please try again.",
+    "childErrorNameRequiredSave": "Enter a name before saving changes.",
+    "childUpdatedSuccess": "{{name}}'s details have been updated.",
+    "childErrorUpdate": "We couldn't update those details. Please try again.",
+    "childRemoveTitle": "Remove child",
+    "childRemoveMessage": "Remove {{name}} from your household?",
+    "childRemoveButton": "Remove",
+    "childRemovedSuccess": "{{name}} has been removed from your household.",
+    "childErrorRemoveTitle": "Couldn't remove child",
+    "childErrorRemoveMessage": "We ran into an issue removing this child. Please try again.",
+    "pendingErrorDismissTitle": "Couldn't dismiss requests",
+    "pendingErrorDismissMessage": "We couldn't mark these requests as reviewed. Please try again."
   },
   "tasks": {
     "addTask": "Add New Task",
