--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -391,7 +391,50 @@
     "nutritionSaveSuccess": "Nutrition goals updated for your profile.",
     "nutritionSaveError": "We couldn’t save your nutrition goals. Please try again.",
     "base": "Estándar",
-    "baseDesc": "Tamaños equilibrados para la mayoría de los lectores."
+    "baseDesc": "Tamaños equilibrados para la mayoría de los lectores.",
+    "accordionExpandHint": "Expandir sección",
+    "accordionCollapseHint": "Contraer sección",
+    "householdSectionTitle": "Mi hogar",
+    "householdSectionDesc": "Administra miembros del hogar, niños y detalles de alergias.",
+    "dietarySectionTitle": "Requisitos dietéticos",
+    "dietarySectionDesc": "Ajusta objetivos nutricionales y preferencias de seguimiento.",
+    "appearanceSectionTitle": "Apariencia de la aplicación",
+    "appearanceSectionDesc": "Personaliza el aspecto, idioma y preferencias de accesibilidad.",
+    "privacySectionTitle": "Privacidad y seguridad",
+    "privacySectionDesc": "Controla la analítica, documentos legales y tus derechos de datos.",
+    "accountSectionTitle": "Información de la cuenta",
+    "accountSectionDesc": "Revisa los detalles de la cuenta o cierra sesión.",
+    "householdErrorCreateCode": "No pudimos crear el código de tu hogar. Desliza para actualizar e inténtalo de nuevo.",
+    "householdCodeCopied": "Código del hogar copiado al portapapeles.",
+    "householdErrorCopyCode": "No pudimos copiar el código. Por favor, inténtalo de nuevo.",
+    "householdCodeUpdated": "El código de tu hogar ha sido actualizado.",
+    "householdCodeGenerated": "Generamos un código nuevo para tu hogar.",
+    "householdErrorUpdateCode": "No pudimos actualizar el código. Por favor, inténtalo de nuevo.",
+    "householdLeaveTitle": "Dejar el hogar",
+    "householdLeaveMessage": "Te moveremos a un hogar completamente nuevo con un código fresco. ¿Estás seguro de que quieres irte?",
+    "householdLeaveButton": "Dejar",
+    "householdLeftSuccess": "Has dejado el hogar anterior. Creamos un código nuevo solo para ti.",
+    "householdErrorLeaveTitle": "No se pudo dejar el hogar",
+    "householdErrorLeaveMessage": "Tuvimos un problema al crear tu nuevo código. Por favor, inténtalo de nuevo.",
+    "householdMemberConfirmed": "Miembro del hogar confirmado.",
+    "householdErrorConfirmTitle": "No se pudo confirmar el miembro",
+    "householdErrorConfirmMessage": "No pudimos aprobar a esta persona en este momento. Por favor, inténtalo de nuevo.",
+    "allergiesUpdated": "Lista de alergias actualizada para tu perfil.",
+    "allergiesErrorSave": "No pudimos guardar tus alergias. Por favor, inténtalo de nuevo.",
+    "childErrorNameRequired": "Ingresa un nombre antes de agregar un niño.",
+    "childAddedSuccess": "{{name}} ha sido agregado a tu hogar.",
+    "childErrorAdd": "No pudimos agregar a ese niño en este momento. Por favor, inténtalo de nuevo.",
+    "childErrorNameRequiredSave": "Ingresa un nombre antes de guardar los cambios.",
+    "childUpdatedSuccess": "Los detalles de {{name}} han sido actualizados.",
+    "childErrorUpdate": "No pudimos actualizar esos detalles. Por favor, inténtalo de nuevo.",
+    "childRemoveTitle": "Eliminar niño",
+    "childRemoveMessage": "¿Eliminar {{name}} de tu hogar?",
+    "childRemoveButton": "Eliminar",
+    "childRemovedSuccess": "{{name}} ha sido eliminado de tu hogar.",
+    "childErrorRemoveTitle": "No se pudo eliminar el niño",
+    "childErrorRemoveMessage": "Tuvimos un problema al eliminar este niño. Por favor, inténtalo de nuevo.",
+    "pendingErrorDismissTitle": "No se pudieron descartar las solicitudes",
+    "pendingErrorDismissMessage": "No pudimos marcar estas solicitudes como revisadas. Por favor, inténtalo de nuevo."
   },
   "tasks": {
     "addTask": "Agregar nueva tarea",
