--- a/i18n/locales/hi.json
+++ b/i18n/locales/hi.json
@@ -430,7 +430,50 @@
     "nutritionSaveSuccess": "आपकी प्रोफ़ाइल के लिए पोषण लक्ष्य अपडेट हो गए हैं।",
     "nutritionSaveError": "हम आपके पोषण लक्ष्य सहेज नहीं पाए। कृपया फिर से कोशिश करें।",
     "base": "मानक",
-    "baseDesc": "अधिकांश पाठकों के लिए संतुलित आकार।"
+    "baseDesc": "अधिकांश पाठकों के लिए संतुलित आकार।",
+    "accordionExpandHint": "अनुभाग विस्तृत करें",
+    "accordionCollapseHint": "अनुभाग संकुचित करें",
+    "householdSectionTitle": "मेरा परिवार",
+    "householdSectionDesc": "परिवार के सदस्यों, बच्चों और एलर्जी विवरण प्रबंधित करें।",
+    "dietarySectionTitle": "आहार आवश्यकताएं",
+    "dietarySectionDesc": "पोषण लक्ष्य और ट्रैकिंग वरीयताएं समायोजित करें।",
+    "appearanceSectionTitle": "ऐप की उपस्थिति",
+    "appearanceSectionDesc": "दिखावट, भाषा और पहुंच वरीयताएं अनुकूलित करें।",
+    "privacySectionTitle": "गोपनीयता और सुरक्षा",
+    "privacySectionDesc": "एनालिटिक्स, कानूनी दस्तावेज और आपके डेटा अधिकार नियंत्रित करें।",
+    "accountSectionTitle": "खाता जानकारी",
+    "accountSectionDesc": "खाता विवरण देखें या साइन आउट करें।",
+    "householdErrorCreateCode": "हम आपका परिवार कोड बना नहीं सके। रीफ्रेश करने के लिए खींचें और फिर से कोशिश करें।",
+    "householdCodeCopied": "परिवार कोड आपके क्लिपबोर्ड में कॉपी हो गया।",
+    "householdErrorCopyCode": "हम कोड कॉपी नहीं कर सके। कृपया फिर से कोशिश करें।",
+    "householdCodeUpdated": "आपका परिवार कोड अपडेट हो गया है।",
+    "householdCodeGenerated": "हमने आपके परिवार के लिए एक नया कोड बनाया है।",
+    "householdErrorUpdateCode": "हम कोड अपडेट नहीं कर सके। कृपया फिर से कोशिश करें।",
+    "householdLeaveTitle": "परिवार छोड़ें",
+    "householdLeaveMessage": "हम आपको एक नए परिवार में स्थानांतरित करेंगे जिसमें एक नया कोड होगा। क्या आप वाकई छोड़ना चाहते हैं?",
+    "householdLeaveButton": "छोड़ें",
+    "householdLeftSuccess": "आपने पुराना परिवार छोड़ दिया है। हमने आपके लिए एक नया कोड बनाया है।",
+    "householdErrorLeaveTitle": "परिवार नहीं छोड़ सके",
+    "householdErrorLeaveMessage": "आपका नया कोड बनाते समय हमें समस्या हुई। कृपया फिर से कोशिश करें।",
+    "householdMemberConfirmed": "परिवार सदस्य की पुष्टि हो गई।",
+    "householdErrorConfirmTitle": "सदस्य की पुष्टि नहीं कर सके",
+    "householdErrorConfirmMessage": "हम अभी इस व्यक्ति को मंजूरी नहीं दे सके। कृपया फिर से कोशिश करें।",
+    "allergiesUpdated": "आपकी प्रोफ़ाइल के लिए एलर्जी सूची अपडेट हो गई है।",
+    "allergiesErrorSave": "हम आपकी एलर्जी सहेज नहीं सके। कृपया फिर से कोशिश करें।",
+    "childErrorNameRequired": "बच्चा जोड़ने से पहले एक नाम दर्ज करें।",
+    "childAddedSuccess": "{{name}} को आपके परिवार में जोड़ दिया गया है।",
+    "childErrorAdd": "हम अभी उस बच्चे को जोड़ नहीं सके। कृपया फिर से कोशिश करें।",
+    "childErrorNameRequiredSave": "परिवर्तन सहेजने से पहले एक नाम दर्ज करें।",
+    "childUpdatedSuccess": "{{name}} का विवरण अपडेट हो गया है।",
+    "childErrorUpdate": "हम उन विवरणों को अपडेट नहीं कर सके। कृपया फिर से कोशिश करें।",
+    "childRemoveTitle": "बच्चा हटाएं",
+    "childRemoveMessage": "{{name}} को अपने परिवार से हटाएं?",
+    "childRemoveButton": "हटाएं",
+    "childRemovedSuccess": "{{name}} को आपके परिवार से हटा दिया गया है।",
+    "childErrorRemoveTitle": "बच्चा हटा नहीं सके",
+    "childErrorRemoveMessage": "इस बच्चे को हटाते समय हमें समस्या हुई। कृपया फिर से कोशिश करें।",
+    "pendingErrorDismissTitle": "अनुरोध खारिज नहीं कर सके",
+    "pendingErrorDismissMessage": "हम इन अनुरोधों को समीक्षित के रूप में चिह्नित नहीं कर सके। कृपया फिर से कोशिश करें।"
   },
   "tasks": {
     "addTask": "नया कार्य जोड़ें",
