--- a/i18n/locales/tl.json
+++ b/i18n/locales/tl.json
@@ -312,7 +312,50 @@
     "motionStandard": "Panatilihin ang galaw",
     "motionStandardDesc": "Panatilihin ang karaniwang animation experience.",
     "errorSaveHighContrast": "Hindi namin na-save ang iyong high contrast preference. Pakisubukang muli.",
-    "errorSaveMotion": "Hindi namin na-save ang iyong motion preference. Pakisubukang muli."
+    "errorSaveMotion": "Hindi namin na-save ang iyong motion preference. Pakisubukang muli.",
+    "accordionExpandHint": "Palawakin ang seksyon",
+    "accordionCollapseHint": "I-collapse ang seksyon",
+    "householdSectionTitle": "Aking sambahayan",
+    "householdSectionDesc": "Pamahalaan ang mga miyembro ng sambahayan, mga bata, at mga detalye ng allergy.",
+    "dietarySectionTitle": "Mga pangangailangan sa pagkain",
+    "dietarySectionDesc": "I-adjust ang mga layunin sa nutrisyon at mga kagustuhan sa pagsubaybay.",
+    "appearanceSectionTitle": "Hitsura ng app",
+    "appearanceSectionDesc": "I-customize ang hitsura, wika, at mga kagustuhan sa accessibility.",
+    "privacySectionTitle": "Privacy at seguridad",
+    "privacySectionDesc": "Kontrolin ang analytics, legal docs, at ang iyong mga karapatan sa data.",
+    "accountSectionTitle": "Impormasyon ng account",
+    "accountSectionDesc": "Suriin ang mga detalye ng account o mag-sign out.",
+    "householdErrorCreateCode": "Hindi namin malikha ang code ng iyong sambahayan. I-pull to refresh at subukan muli.",
+    "householdCodeCopied": "Na-copy ang code ng sambahayan sa iyong clipboard.",
+    "householdErrorCopyCode": "Hindi namin ma-copy ang code. Pakisubukang muli.",
+    "householdCodeUpdated": "Na-update ang code ng iyong sambahayan.",
+    "householdCodeGenerated": "Nakagawa kami ng bagong code para sa iyong sambahayan.",
+    "householdErrorUpdateCode": "Hindi namin ma-update ang code. Pakisubukang muli.",
+    "householdLeaveTitle": "Umalis sa sambahayan",
+    "householdLeaveMessage": "Ililipat ka namin sa isang bagong sambahayan na may bagong code. Sigurado ka bang gusto mong umalis?",
+    "householdLeaveButton": "Umalis",
+    "householdLeftSuccess": "Umalis ka na sa lumang sambahayan. Nakagawa kami ng bagong code para lang sa iyo.",
+    "householdErrorLeaveTitle": "Hindi makauwi sa sambahayan",
+    "householdErrorLeaveMessage": "Nakaranas kami ng problema sa paglikha ng iyong bagong code. Pakisubukang muli.",
+    "householdMemberConfirmed": "Nakumpirma ang miyembro ng sambahayan.",
+    "householdErrorConfirmTitle": "Hindi makumpirma ang miyembro",
+    "householdErrorConfirmMessage": "Hindi namin ma-approve ang taong ito ngayon. Pakisubukang muli.",
+    "allergiesUpdated": "Na-update ang listahan ng allergy para sa iyong profile.",
+    "allergiesErrorSave": "Hindi namin ma-save ang iyong mga allergy. Pakisubukang muli.",
+    "childErrorNameRequired": "Maglagay ng pangalan bago magdagdag ng bata.",
+    "childAddedSuccess": "Naidagdag si {{name}} sa iyong sambahayan.",
+    "childErrorAdd": "Hindi namin maidagdag ang batang iyon ngayon. Pakisubukang muli.",
+    "childErrorNameRequiredSave": "Maglagay ng pangalan bago i-save ang mga pagbabago.",
+    "childUpdatedSuccess": "Na-update ang mga detalye ni {{name}}.",
+    "childErrorUpdate": "Hindi namin ma-update ang mga detalye na iyon. Pakisubukang muli.",
+    "childRemoveTitle": "Alisin ang bata",
+    "childRemoveMessage": "Alisin si {{name}} sa iyong sambahayan?",
+    "childRemoveButton": "Alisin",
+    "childRemovedSuccess": "Naalis si {{name}} sa iyong sambahayan.",
+    "childErrorRemoveTitle": "Hindi maalis ang bata",
+    "childErrorRemoveMessage": "Nakaranas kami ng problema sa pag-alis ng batang ito. Pakisubukang muli.",
+    "pendingErrorDismissTitle": "Hindi ma-dismiss ang mga request",
+    "pendingErrorDismissMessage": "Hindi namin ma-mark ang mga request na ito bilang nareview. Pakisubukang muli."
   },
   "tasks": {
     "addTask": "Magdagdag ng Bagong Gawain",
