--- a/i18n/locales/ur.json
+++ b/i18n/locales/ur.json
@@ -430,7 +430,50 @@
     "nutritionSaveSuccess": "آپ کی پروفائل کے لیے غذائی اہداف اپڈیٹ ہو گئے ہیں۔",
     "nutritionSaveError": "ہم آپ کے غذائی اہداف محفوظ نہیں کر سکے۔ براہ کرم دوبارہ کوشش کریں۔",
     "base": "معیاری",
-    "baseDesc": "زیادہ تر قارئین کے لیے متوازن سائز۔"
+    "baseDesc": "زیادہ تر قارئین کے لیے متوازن سائز۔",
+    "accordionExpandHint": "سیکشن پھیلائیں",
+    "accordionCollapseHint": "سیکشن سکیڑیں",
+    "householdSectionTitle": "میرا گھرانہ",
+    "householdSectionDesc": "گھرانے کے اراکین، بچوں اور الرجی کی تفصیلات کا انتظام کریں۔",
+    "dietarySectionTitle": "غذائی ضروریات",
+    "dietarySectionDesc": "غذائی اہداف اور ٹریکنگ ترجیحات ایڈجسٹ کریں۔",
+    "appearanceSectionTitle": "ایپ کی ظاہری شکل",
+    "appearanceSectionDesc": "ظاہری شکل، زبان اور رسائی کی ترجیحات کو اپنی مرضی کے مطابق بنائیں۔",
+    "privacySectionTitle": "رازداری اور سیکیورٹی",
+    "privacySectionDesc": "تجزیات، قانونی دستاویزات اور اپنے ڈیٹا کے حقوق کو کنٹرول کریں۔",
+    "accountSectionTitle": "اکاؤنٹ کی معلومات",
+    "accountSectionDesc": "اکاؤنٹ کی تفصیلات دیکھیں یا سائن آؤٹ کریں۔",
+    "householdErrorCreateCode": "ہم آپ کا گھرانہ کوڈ نہیں بنا سکے۔ ریفریش کرنے کے لیے کھینچیں اور دوبارہ کوشش کریں۔",
+    "householdCodeCopied": "گھرانہ کوڈ آپ کے کلپ بورڈ میں کاپی ہو گیا۔",
+    "householdErrorCopyCode": "ہم کوڈ کاپی نہیں کر سکے۔ براہ کرم دوبارہ کوشش کریں۔",
+    "householdCodeUpdated": "آپ کا گھرانہ کوڈ اپڈیٹ ہو گیا ہے۔",
+    "householdCodeGenerated": "ہم نے آپ کے گھرانے کے لیے ایک نیا کوڈ بنایا ہے۔",
+    "householdErrorUpdateCode": "ہم کوڈ اپڈیٹ نہیں کر سکے۔ براہ کرم دوبارہ کوشش کریں۔",
+    "householdLeaveTitle": "گھرانہ چھوڑیں",
+    "householdLeaveMessage": "ہم آپ کو ایک بالکل نئے گھرانے میں منتقل کریں گے جس میں ایک نیا کوڈ ہوگا۔ کیا آپ واقعی چھوڑنا چاہتے ہیں؟",
+    "householdLeaveButton": "چھوڑیں",
+    "householdLeftSuccess": "آپ نے پرانا گھرانہ چھوڑ دیا ہے۔ ہم نے آپ کے لیے ایک نیا کوڈ بنایا ہے۔",
+    "householdErrorLeaveTitle": "گھرانہ نہیں چھوڑ سکے",
+    "householdErrorLeaveMessage": "آپ کا نیا کوڈ بناتے وقت ہمیں مسئلہ پیش آیا۔ براہ کرم دوبارہ کوشش کریں۔",
+    "householdMemberConfirmed": "گھرانے کے رکن کی تصدیق ہو گئی۔",
+    "householdErrorConfirmTitle": "رکن کی تصدیق نہیں کر سکے",
+    "householdErrorConfirmMessage": "ہم اس وقت اس شخص کو منظور نہیں کر سکے۔ براہ کرم دوبارہ کوشش کریں۔",
+    "allergiesUpdated": "آپ کی پروفائل کے لیے الرجی کی فہرست اپڈیٹ ہو گئی ہے۔",
+    "allergiesErrorSave": "ہم آپ کی الرجی محفوظ نہیں کر سکے۔ براہ کرم دوبارہ کوشش کریں۔",
+    "childErrorNameRequired": "بچہ شامل کرنے سے پہلے ایک نام درج کریں۔",
+    "childAddedSuccess": "{{name}} کو آپ کے گھرانے میں شامل کر دیا گیا ہے۔",
+    "childErrorAdd": "ہم اس وقت اس بچے کو شامل نہیں کر سکے۔ براہ کرم دوبارہ کوشش کریں۔",
+    "childErrorNameRequiredSave": "تبدیلیاں محفوظ کرنے سے پہلے ایک نام درج کریں۔",
+    "childUpdatedSuccess": "{{name}} کی تفصیلات اپڈیٹ ہو گئی ہیں۔",
+    "childErrorUpdate": "ہم ان تفصیلات کو اپڈیٹ نہیں کر سکے۔ براہ کرم دوبارہ کوشش کریں۔",
+    "childRemoveTitle": "بچہ ہٹائیں",
+    "childRemoveMessage": "{{name}} کو اپنے گھرانے سے ہٹائیں؟",
+    "childRemoveButton": "ہٹائیں",
+    "childRemovedSuccess": "{{name}} کو آپ کے گھرانے سے ہٹا دیا گیا ہے۔",
+    "childErrorRemoveTitle": "بچہ ہٹا نہیں سکے",
+    "childErrorRemoveMessage": "اس بچے کو ہٹاتے وقت ہمیں مسئلہ پیش آیا۔ براہ کرم دوبارہ کوشش کریں۔",
+    "pendingErrorDismissTitle": "درخواستیں مسترد نہیں کر سکے",
+    "pendingErrorDismissMessage": "ہم ان درخواستوں کو جائزہ لیا گیا کے طور پر نشان زد نہیں کر سکے۔ براہ کرم دوبارہ کوشش کریں۔"
   },
   "tasks": {
     "addTask": "نیا کام شامل کریں",
