--- a/i18n/locales/vi.json
+++ b/i18n/locales/vi.json
@@ -312,7 +312,50 @@
     "motionStandard": "Giữ chuyển động",
     "motionStandardDesc": "Giữ nguyên trải nghiệm hoạt ảnh tiêu chuẩn.",
     "errorSaveHighContrast": "Chúng tôi không thể lưu tùy chọn độ tương phản cao của bạn. Vui lòng thử lại.",
-    "errorSaveMotion": "Chúng tôi không thể lưu tùy chọn chuyển động của bạn. Vui lòng thử lại."
+    "errorSaveMotion": "Chúng tôi không thể lưu tùy chọn chuyển động của bạn. Vui lòng thử lại.",
+    "accordionExpandHint": "Mở rộng phần",
+    "accordionCollapseHint": "Thu gọn phần",
+    "householdSectionTitle": "Gia đình của tôi",
+    "householdSectionDesc": "Quản lý thành viên gia đình, trẻ em và chi tiết dị ứng.",
+    "dietarySectionTitle": "Yêu cầu ăn kiêng",
+    "dietarySectionDesc": "Điều chỉnh mục tiêu dinh dưỡng và tùy chọn theo dõi.",
+    "appearanceSectionTitle": "Giao diện ứng dụng",
+    "appearanceSectionDesc": "Tùy chỉnh giao diện, ngôn ngữ và tùy chọn khả năng truy cập.",
+    "privacySectionTitle": "Quyền riêng tư và bảo mật",
+    "privacySectionDesc": "Kiểm soát phân tích, tài liệu pháp lý và quyền dữ liệu của bạn.",
+    "accountSectionTitle": "Thông tin tài khoản",
+    "accountSectionDesc": "Xem chi tiết tài khoản hoặc đăng xuất.",
+    "householdErrorCreateCode": "Chúng tôi không thể tạo mã gia đình của bạn. Kéo để làm mới và thử lại.",
+    "householdCodeCopied": "Mã gia đình đã được sao chép vào clipboard.",
+    "householdErrorCopyCode": "Chúng tôi không thể sao chép mã. Vui lòng thử lại.",
+    "householdCodeUpdated": "Mã gia đình của bạn đã được cập nhật.",
+    "householdCodeGenerated": "Chúng tôi đã tạo mã mới cho gia đình của bạn.",
+    "householdErrorUpdateCode": "Chúng tôi không thể cập nhật mã. Vui lòng thử lại.",
+    "householdLeaveTitle": "Rời khỏi gia đình",
+    "householdLeaveMessage": "Chúng tôi sẽ chuyển bạn sang một gia đình hoàn toàn mới với mã mới. Bạn có chắc chắn muốn rời đi không?",
+    "householdLeaveButton": "Rời đi",
+    "householdLeftSuccess": "Bạn đã rời khỏi gia đình cũ. Chúng tôi đã tạo mã mới chỉ cho bạn.",
+    "householdErrorLeaveTitle": "Không thể rời khỏi gia đình",
+    "householdErrorLeaveMessage": "Chúng tôi gặp sự cố khi tạo mã mới của bạn. Vui lòng thử lại.",
+    "householdMemberConfirmed": "Thành viên gia đình đã được xác nhận.",
+    "householdErrorConfirmTitle": "Không thể xác nhận thành viên",
+    "householdErrorConfirmMessage": "Chúng tôi không thể phê duyệt người này ngay bây giờ. Vui lòng thử lại.",
+    "allergiesUpdated": "Danh sách dị ứng đã được cập nhật cho hồ sơ của bạn.",
+    "allergiesErrorSave": "Chúng tôi không thể lưu dị ứng của bạn. Vui lòng thử lại.",
+    "childErrorNameRequired": "Nhập tên trước khi thêm trẻ em.",
+    "childAddedSuccess": "{{name}} đã được thêm vào gia đình của bạn.",
+    "childErrorAdd": "Chúng tôi không thể thêm trẻ em đó ngay bây giờ. Vui lòng thử lại.",
+    "childErrorNameRequiredSave": "Nhập tên trước khi lưu thay đổi.",
+    "childUpdatedSuccess": "Chi tiết của {{name}} đã được cập nhật.",
+    "childErrorUpdate": "Chúng tôi không thể cập nhật những chi tiết đó. Vui lòng thử lại.",
+    "childRemoveTitle": "Xóa trẻ em",
+    "childRemoveMessage": "Xóa {{name}} khỏi gia đình của bạn?",
+    "childRemoveButton": "Xóa",
+    "childRemovedSuccess": "{{name}} đã được xóa khỏi gia đình của bạn.",
+    "childErrorRemoveTitle": "Không thể xóa trẻ em",
+    "childErrorRemoveMessage": "Chúng tôi gặp sự cố khi xóa trẻ em này. Vui lòng thử lại.",
+    "pendingErrorDismissTitle": "Không thể bỏ qua yêu cầu",
+    "pendingErrorDismissMessage": "Chúng tôi không thể đánh dấu các yêu cầu này là đã xem xét. Vui lòng thử lại."
   },
   "tasks": {
     "addTask": "Thêm nhiệm vụ mới",
