--- a/i18n/locales/zh.json
+++ b/i18n/locales/zh.json
@@ -312,7 +312,50 @@
     "motionStandard": "保留动效",
     "motionStandardDesc": "保持标准的动画体验。",
     "errorSaveHighContrast": "我们无法保存您的高对比度偏好。请重试。",
-    "errorSaveMotion": "我们无法保存您的动效偏好。请重试。"
+    "errorSaveMotion": "我们无法保存您的动效偏好。请重试。",
+    "accordionExpandHint": "展开部分",
+    "accordionCollapseHint": "折叠部分",
+    "householdSectionTitle": "我的家庭",
+    "householdSectionDesc": "管理家庭成员、儿童和过敏详情。",
+    "dietarySectionTitle": "饮食要求",
+    "dietarySectionDesc": "调整营养目标和跟踪偏好。",
+    "appearanceSectionTitle": "应用外观",
+    "appearanceSectionDesc": "自定义外观、语言和可访问性偏好。",
+    "privacySectionTitle": "隐私和安全",
+    "privacySectionDesc": "控制分析、法律文档和您的数据权利。",
+    "accountSectionTitle": "账户信息",
+    "accountSectionDesc": "查看账户详情或退出登录。",
+    "householdErrorCreateCode": "我们无法创建您的家庭代码。请下拉刷新并重试。",
+    "householdCodeCopied": "家庭代码已复制到剪贴板。",
+    "householdErrorCopyCode": "我们无法复制代码。请重试。",
+    "householdCodeUpdated": "您的家庭代码已更新。",
+    "householdCodeGenerated": "我们为您的家庭生成了新代码。",
+    "householdErrorUpdateCode": "我们无法更新代码。请重试。",
+    "householdLeaveTitle": "离开家庭",
+    "householdLeaveMessage": "我们将把您移到一个全新的家庭，并生成新代码。您确定要离开吗？",
+    "householdLeaveButton": "离开",
+    "householdLeftSuccess": "您已离开旧家庭。我们为您创建了新代码。",
+    "householdErrorLeaveTitle": "无法离开家庭",
+    "householdErrorLeaveMessage": "创建新代码时遇到问题。请重试。",
+    "householdMemberConfirmed": "家庭成员已确认。",
+    "householdErrorConfirmTitle": "无法确认成员",
+    "householdErrorConfirmMessage": "我们目前无法批准此人。请重试。",
+    "allergiesUpdated": "您的个人资料过敏列表已更新。",
+    "allergiesErrorSave": "我们无法保存您的过敏信息。请重试。",
+    "childErrorNameRequired": "添加儿童前请输入姓名。",
+    "childAddedSuccess": "{{name}} 已添加到您的家庭。",
+    "childErrorAdd": "我们目前无法添加该儿童。请重试。",
+    "childErrorNameRequiredSave": "保存更改前请输入姓名。",
+    "childUpdatedSuccess": "{{name}} 的详情已更新。",
+    "childErrorUpdate": "我们无法更新这些详情。请重试。",
+    "childRemoveTitle": "移除儿童",
+    "childRemoveMessage": "从您的家庭中移除 {{name}}？",
+    "childRemoveButton": "移除",
+    "childRemovedSuccess": "{{name}} 已从您的家庭中移除。",
+    "childErrorRemoveTitle": "无法移除儿童",
+    "childErrorRemoveMessage": "移除该儿童时遇到问题。请重试。",
+    "pendingErrorDismissTitle": "无法关闭请求",
+    "pendingErrorDismissMessage": "我们无法将这些请求标记为已审核。请重试。"
   },
   "tasks": {
     "addTask": "添加新任务",
