--- a/i18n/locales/fr.json
+++ b/i18n/locales/fr.json
@@ -481,7 +481,50 @@
     "nutritionSaveSuccess": "Nutrition goals updated for your profile.",
     "nutritionSaveError": "We couldn’t save your nutrition goals. Please try again.",
     "base": "Standard",
-    "baseDesc": "Tailles équilibrées pour la plupart des lecteurs."
+    "baseDesc": "Tailles équilibrées pour la plupart des lecteurs.",
+    "accordionExpandHint": "Développer la section",
+    "accordionCollapseHint": "Réduire la section",
+    "householdSectionTitle": "Mon foyer",
+    "householdSectionDesc": "Gérer les membres du foyer, les enfants et les détails des allergies.",
+    "dietarySectionTitle": "Besoins alimentaires",
+    "dietarySectionDesc": "Ajuster les objectifs nutritionnels et les préférences de suivi.",
+    "appearanceSectionTitle": "Apparence de l'application",
+    "appearanceSectionDesc": "Personnaliser l'apparence, la langue et les préférences d'accessibilité.",
+    "privacySectionTitle": "Confidentialité et sécurité",
+    "privacySectionDesc": "Contrôler les analyses, les documents juridiques et vos droits sur les données.",
+    "accountSectionTitle": "Informations du compte",
+    "accountSectionDesc": "Consulter les détails du compte ou se déconnecter.",
+    "householdErrorCreateCode": "Nous n'avons pas pu créer le code de votre foyer. Tirez pour actualiser et réessayez.",
+    "householdCodeCopied": "Code du foyer copié dans votre presse-papiers.",
+    "householdErrorCopyCode": "Nous n'avons pas pu copier le code. Veuillez réessayer.",
+    "householdCodeUpdated": "Le code de votre foyer a été mis à jour.",
+    "householdCodeGenerated": "Nous avons généré un nouveau code pour votre foyer.",
+    "householdErrorUpdateCode": "Nous n'avons pas pu mettre à jour le code. Veuillez réessayer.",
+    "householdLeaveTitle": "Quitter le foyer",
+    "householdLeaveMessage": "Nous vous déplacerons vers un nouveau foyer avec un code frais. Êtes-vous sûr de vouloir partir ?",
+    "householdLeaveButton": "Quitter",
+    "householdLeftSuccess": "Vous avez quitté l'ancien foyer. Nous avons créé un nouveau code juste pour vous.",
+    "householdErrorLeaveTitle": "Impossible de quitter le foyer",
+    "householdErrorLeaveMessage": "Nous avons rencontré un problème lors de la création de votre nouveau code. Veuillez réessayer.",
+    "householdMemberConfirmed": "Membre du foyer confirmé.",
+    "householdErrorConfirmTitle": "Impossible de confirmer le membre",
+    "householdErrorConfirmMessage": "Nous n'avons pas pu approuver cette personne pour le moment. Veuillez réessayer.",
+    "allergiesUpdated": "Liste des allergies mise à jour pour votre profil.",
+    "allergiesErrorSave": "Nous n'avons pas pu enregistrer vos allergies. Veuillez réessayer.",
+    "childErrorNameRequired": "Entrez un nom avant d'ajouter un enfant.",
+    "childAddedSuccess": "{{name}} a été ajouté à votre foyer.",
+    "childErrorAdd": "Nous n'avons pas pu ajouter cet enfant pour le moment. Veuillez réessayer.",
+    "childErrorNameRequiredSave": "Entrez un nom avant d'enregistrer les modifications.",
+    "childUpdatedSuccess": "Les détails de {{name}} ont été mis à jour.",
+    "childErrorUpdate": "Nous n'avons pas pu mettre à jour ces détails. Veuillez réessayer.",
+    "childRemoveTitle": "Retirer l'enfant",
+    "childRemoveMessage": "Retirer {{name}} de votre foyer ?",
+    "childRemoveButton": "Retirer",
+    "childRemovedSuccess": "{{name}} a été retiré de votre foyer.",
+    "childErrorRemoveTitle": "Impossible de retirer l'enfant",
+    "childErrorRemoveMessage": "Nous avons rencontré un problème lors du retrait de cet enfant. Veuillez réessayer.",
+    "pendingErrorDismissTitle": "Impossible d'ignorer les demandes",
+    "pendingErrorDismissMessage": "Nous n'avons pas pu marquer ces demandes comme examinées. Veuillez réessayer."
   },
   "tasks": {
     "addTask": "Ajouter une nouvelle tâche",
